hugo/themes/helix/static/assets/css/saadixl.css
@font-face {
		font-family: Neo-Sans-Pro;
		src: url(fonts/Neo-Sans-Pro.ttf);
		font-style: normal;
}

@font-face {
		font-family: Neo-Sans-Pro-Light;
		src: url(fonts/Neo-Sans-Pro-Light.ttf);
		font-style: normal;
		font-weight: 200;
}

section{
	padding: 120px 0 40px 0;
}

.btn {
	border-radius: 0;
}


.section-tagline{
			font-family: Neo-Sans-Pro;
		margin:20px 0 60px 0;
		font-size: 20px;
		color: #555;
		font-size: 22px;
}

/* NAV */
nav.navbar{
	background: url(bg/stardust.png);
	padding: 30px 0;
	border: 0;
	border-radius: 0;
}

.navbar-default .navbar-nav>li>a{
	color: #f5f5f5 !important;
	text-transform: uppercase;
	font-family: 'Montserrat', sans-serif;
	letter-spacing: 4px;
	font-size: 11px;
}

.navbar-default .navbar-nav>li:hover a{
	color: #999 !important;
}

.navbar-brand{
	font-family: 'Yanone Kaffeesatz', sans-serif;
	text-transform: uppercase;
	font-size: 30px;
	cursor: pointer;
}

.navbar-default .navbar-brand:hover{
	color: #999;
}

.navbar-default .navbar-brand{
	color: #f5f5f5;
}

/* INTRO */
#intro{
	/* background-color: #1f262c; */
	background: url(bg/headerbg.jpg);
	/*background: blue;*/
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	background-position: bottom;
	padding: 280px 0 100px 0;
}

#intro .title{
	font-family: 'Yanone Kaffeesatz', sans-serif;
	letter-spacing: 5px;
	font-weight: 400;
	text-transform: uppercase;
	font-size: 70px;
	color: #555;
}

#intro .tagline{
	font-family: "Neo-Sans-Pro-Light";
	font-size: 22px;
	letter-spacing: 2px;
	color: #333;
	font-weight: bold;
	margin-top: 20px;
}

.down-arrow {
	color: #000 !important;
	opacity: 0.4;
	margin-top: 70px;
	font-size: 50px;
	text-decoration: none !important;
}

/*ABOUT*/

#about{
	padding: 60px 0;
}

.about-content{
	font-size: 22px;
	color: #555;
	padding: 30px 10px;
	column-count: 2;
}
.about-img img{
	margin:0 auto;
	margin-top: 40px;
	border-radius: 50%;
	width: 60%;
}

.avatar-tagline{
	text-align: center;
	margin-top: 20px;
	font-family: 'Montserrat', sans-serif;
	font-size: 10pt;
	padding: 0 70px;
}

.about-content p {
		text-align: justify;
		font-family: "Neo-Sans-Pro-Light";
		font-size: 22px;
		font-weight: 200;
		margin-top: 0;
		margin-bottom: 20px;
		line-height: 1.5;
		color: #555;
}

.about-signature{
	font-family: "Neo-Sans-Pro";
	font-weight: 400;
	font-size: 25px;
	margin-top: 60px !important;
}

.about-designation {
	margin-top: 40px !important;
	text-align: right !important;
	font-family: "Neo-Sans-Pro";
	font-size: 20px !important;
	font-weight: 500;
	color: #555 !important;
	margin-bottom: 0 !important;
}


/* Works */
#works{
	background: #f5f5f5;
	color: #555;
}

.pet-project-meta {
	font-size: 13px !important;
	margin-bottom: 0;
}

.pro-project-meta-label, .pet-project-meta-label {
	font-size: 14px !important;
	margin-bottom: 0;
	font-weight: bold;
	font-family: helvetica !important;
	color: #666;
}

.pro-project-meta {
	font-weight: bold;
	font-size: 15px !important;
}

.proj-content{
	min-height: 165px;
}

.proj-detail{
	padding:0 40px;
}

.proj-detail h2{
	font-family: "Neo-Sans-Pro";
	margin-top: 0;
	margin-bottom: 20px;
}

.proj-detail p{
	font-family: "Neo-Sans-Pro-Light";
	font-size: 22px;
}

.proj-btn{
	font-family: "Neo-Sans-Pro-Light";
	margin-top: 20px;
	border:none;
	box-shadow: none;
	outline-color: none;
	color: #f1f1f1;
	text-shadow: none;
	background: #444349 !important;
	border-bottom: 3px solid #3d3c41;
	padding: auto 30px;
}
.proj-btn:hover,
.pet-btn:hover{
	background: #2f2e33 !important;
	border-color: #2f2e33 !important;
	color: #ddd;
	cursor: pointer;
}
.owl-controls{
	margin-top: 40px !important;
}

#experiments{
	background: #fff;
	padding: 40px 0;
}

#experiments .section-title{
	margin-bottom: 5px;
}


.pet-proj-img{
	padding:0 40px;
	text-align: center;
	color: #555;
}

.pet-content{
	padding:0 40px;
	color: #555;
}

.pet-proj h3{
	font-family: "Neo-Sans-Pro";
}

.pet-proj p{
	font-family: "Neo-Sans-Pro-Light";
}

.pet-proj img{

}

.pet-btn{
	font-family: "Neo-Sans-Pro-Light";
	background: #444349 !important;
	font-weight: 200px !important;
	border-bottom: 3px solid #3d3c41;
	padding: auto 30px;
	color: #fff;
	border:none;
	outline:none;
	margin-top: 10px;
}

.pro-project__logo{

}

/*Contact*/
#contact{
	background: #1f262c;
}

.contact-left-tagline{
	font-family: "Neo-Sans-Pro-Light";
	color: #ddd !important;
	font-size: 35px;
	margin-top: 0;
	text-shadow: none;
}

.contact-form{
	font-family: "Neo-Sans-Pro-Light";
	color: #ddd !important;
	padding-left: 40px;
}

.contact-form .form-group{
	margin-bottom: 30px;
}

.contact-form input[type=text],
.contact-form textarea{
	background: transparent;
	border:none;
	box-shadow: none;
	border-radius: 0;
	outline:none !important;
	border-bottom: 1px solid #515964;
	padding-left: 0;
	margin-bottom: 20px;
	font-size: 20px;
	padding-bottom:15px !important;
	color: #888;
}

.contact-form textarea{
	resize: none;
	min-height: 140px;
}
.contact-form textarea:focus{
	box-shadow: none !important;
	border:none;
	border-bottom: 1px solid #515964;
}

.contact-btn{
	font-family: "Neo-Sans-Pro-Light";
	background: #1b2227 !important;
	color: #ccc;
	text-shadow: none;
	border:none;
	outline:none;
	box-shadow: none;
	margin-top: 10px;
	padding: 10px 25px;
	border-bottom: 3px solid #181e23;
}

.contact-btn:hover{
	background: #12161a !important;
	border-color: #12161a !important;
	color: #ddd;
}

ul.social{
	margin-left: 0;
	padding-left: 0;
	margin-top: 40px;
}

ul.social li{
	list-style: none;
	font-family: "Neo-Sans-Pro-Light";
	font-size: 22px;
	margin-bottom: 5px;
}
ul.social li:hover a{
	color: #555;
	text-decoration: none;
}

ul.social li a{
	color: #888;
}

ul.social li i{
	margin-left: 10px;
}

footer{
		background: #12171b;
		padding: 80px 0;
		text-align: center;
		font-family: 'Montserrat', sans-serif;
		font-size: 15px;
		color: #888;
		text-shadow: none !important;
}

/*ALL MEDIA QUERIES*/
@media (max-width: 991px) {

	#about {
		padding: 60px 30px;
	}

	.avatar-tagline {
			padding: 0;
	}
	.about-content p{
		padding-right:0;
	}

	.proj-detail{
		margin-top: 15px;
	}

	.contact-form {
		padding-left: 0;
	}

	.owl-carousel .owl-item img {
		padding-left: 25px;
		padding-right: 25px;
	}

	.contact-left-tagline{
		text-align: center;
		padding: 0 30px;
	}

	ul.social{
		text-align: center;
	}

	ul.social li{
		margin-bottom: 15px;
	}

}
@media (max-width: 767px) {

	.navbar-default .navbar-brand {
			margin-bottom: 20px;
	}

	.navbar-default .navbar-toggle, .navbar-toggle.collapsed {
			border: none !important;
			color: #fff !important;
	}

	.navbar-default .navbar-toggle .icon-bar{
		background: #fff;
		opacity: 1;
	}

	.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
			background-color: transparent;
			border: none;
	}

	.contact-form{
		padding: 10px 40px;
	}

	.about-content {
		column-count: 1;
	}

	.about-content p {
		font-size: 16px;
	}

	#about {
		padding-top: 0;
	}

	#intro {
		padding: 50px 0;
		margin-top: 50px;
	}

	#intro .title {
		font-size: 18px;
	}

	#intro .tagline  {
		font-size: 15px;
		margin-top: 5px;
	}

	.about-designation {
		float: left !important;
    text-align: left !important;
	}

	.down-arrow {
		display: none;
	}
}

